Added error message in case the app is launched from a folder with a name that contains a colon. Added German Localization of error messages.

--- a/appbundler/res/en.lproj/Localizable.strings
+++ b/appbundler/res/en.lproj/Localizable.strings
@@ -1,3 +1,4 @@
 "JRELoadError" = "Unable to load Java Runtime Environment.";
 "MainClassNameRequired" = "Main class name is required.";
 "JavaDirectoryNotFound" = "Unable to enumerate Java directory contents.";
+"BundlePathContainsColon" = "Cannot launch from folder that contains a \"/\" in its name.";
