--- a/appbundler/res/en.lproj/Localizable.strings
+++ b/appbundler/res/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
-"JRELoadError" = "Kann die Java Laufzeitumgebung nicht laden.";
-"JRExLoadError" = "Kann die Java %d Laufzeitumgebung nicht laden.";
-"MainClassNameRequired" = "Hauptklassenname ist erforderlich.";
-"JavaDirectoryNotFound" = "Kann den Inhalt des Java-Ordners nicht lesen.";
-"BundlePathContainsColon" = "Kann nicht vom einem Ordner aus starten, der \"/\" in seinem Namen enthält.";
+"JRELoadError" = "Unable to load Java Runtime Environment.";
+"JRExLoadError" = "Unable to load a Java %d Runtime Environment.";
+"MainClassNameRequired" = "Main class name is required.";
+"JavaDirectoryNotFound" = "Unable to enumerate Java directory contents.";
+"BundlePathContainsColon" = "Cannot launch from folder that contains a \"/\" in its name.";
